# hidapi

./: .gitignore  CMakeLists.txt  README.txt
.github/workflows/: actions.yml  build_linux.yml  build_macos.yml  build_windows.yml
build_eclipse/hidtestosx/: cmake_install.cmake  hidtestosx
hidapi/: hidapi.h
hidapi2osc/: CMakeLists.txt
hidapi_parser/: CMakeLists.txt  hidapi_parser.c
hidparsertest/: CMakeLists.txt  hidparsertest
hidtest/: CMakeLists.txt  hidtest.cpp
hidtestosx/: CMakeLists.txt
libusb/: CMakeLists.txt
linux/: CMakeLists.txt
mac/: CMakeLists.txt  hid.c
windows/: CMakeLists.txt  hid.c
